specs/demo/yamls/network-policy.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: web-backend
  labels:
     role: web-backend

---

apiVersion: v1
kind: Namespace
metadata:
  name: web-frontend
  labels:
     role: web-frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment
  name: nginx-deployment
  namespace: web-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service
  name: nginx-service
  namespace: web-backend
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: web-backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---
